[package]
name = "grrs"
version = "0.1.0"
authors = ["Andrew Murray <darbyguitars@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
failure = "0.1.5"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"